fix startup